[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web ="4"
actix-rt = "2"
dotenvy = "*"
sqlx = {version = "*", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}
serde = {version = "*", features = ["derive"]}
chrono = {version = "*", features = ["serde"]}
openssl = {version = "*", features = ["vendored"]}
rand = "*"
