[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
default-run="tutor-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = {version = "1.0.192", features = ["derive"]}
chrono = {version = "0.4.31", features = ["serde"]}
